# flutter_Qwen3.5-4B

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt  README.md  build.gradle  proguard-rules.pro
android/src/main/kotlin/dev/flutter/flutter_qwen/: FlutterQwenPlugin.kt
example/: pubspec.yaml
example/lib/: main.dart
ios/: README.md  flutter_qwen.podspec
ios/Classes/: FlutterQwenPlugin.m
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
lib/: flutter_qwen.dart
lib/src/: flutter_qwen.dart  llama_ffi.dart  model_manager.dart
scripts/: test_ios.sh
test/: android_plugin_test.dart  flutter_qwen_test.dart  integrity_verifier_test.dart  ios_plugin_test.dart  llama_ffi_test.dart  model_manager_test.dart  model_manager_test_enhanced.dart  qwen_unit_test.dart
